add whitenoise storage

--- a/templates/trading/include/footer.html
+++ b/templates/trading/include/footer.html
@@ -8,7 +8,7 @@
       <div class="col-md-3 mb-4">
         <div class="d-flex align-items-center mb-3">
           <img src="{% static 'images/logo.png' %}" alt="Logo" style="height:40px; margin-right:8px;">
-          <span style="color:#c4ff00; font-weight:bold; font-size:28px;">TRACO</span>
+          <!-- <span style="color:#c4ff00; font-weight:bold; font-size:28px;"></span> -->
         </div>
         <p style="margin-bottom:10px;">Get in Touch</p>
         <div class="d-flex gap-3">
