--- a/templates/trading/layout/login.html
+++ b/templates/trading/layout/login.html
@@ -4,7 +4,11 @@
 {% block content %}
 <div class="row d-flex align-items-center">
   <div class="col-md-6 text-center">
-    <img src="{% static 'images/bull.png' %}" class="img-fluid" style="max-width: 600px;">
+    {% if bull %}
+  <img src="{{ bull.image.url }}" class="img-fluid" style="max-width:350px;">
+{% else %}
+  <img src="{% static 'images/bull.png' %}" class="img-fluid" style="max-width:350px;">
+{% endif %}
   </div>
 
   <div class="col-md-6">
