add allowed hot

--- a/templates/trading/include/footer.html
+++ b/templates/trading/include/footer.html
@@ -1,25 +1,25 @@
 {% load static %}
 
-<footer style="background:#0b0f0c; color:white; padding:40px 20px;">
-  <div class="container-fluid" style="border:1px solid white; padding:30px;">
+<footer style="background:#0b0f0c; color:white; padding: 40px 10px 0px 20px;">
+  <div class="container-fluid" style="border-top:1px solid white; padding: 15px 30px 0px 30px;">
     <div class="row text-start">
 
       
-      <div class="col-md-3 mb-4">
+      <div class="col-md-3 mt-2">
         <div class="d-flex align-items-center mb-3">
-          <img src="{% static 'images/logo.png' %}" alt="Logo" style="height:40px; margin-right:8px;">
+          <img src="{% static 'images/logo.png' %}" alt="Logo" style="height:70px; margin-right:8px;">
           <!-- <span style="color:#c4ff00; font-weight:bold; font-size:28px;"></span> -->
         </div>
-        <p style="margin-bottom:10px;">Get in Touch</p>
+        <p class="fs-4" style="margin-bottom:10px; font-weight:bold;">Get in Touch</p>
         <div class="d-flex gap-3">
           <div style="background:#c4ff00; border-radius:50%; padding:10px; display:flex; align-items:center; justify-content:center;">
-            <img src="{% static 'images/facebook.png' %}" alt="Facebook" style="height:24px; width:24px;">
+            <img src="{% static 'images/facebook.png' %}" alt="Facebook" style="height:40px; width:40px;">
           </div>
           <div style="background:#c4ff00; border-radius:50%; padding:10px; display:flex; align-items:center; justify-content:center;">
-            <img src="{% static 'images/twitter.png' %}" alt="Twitter" style="height:24px; width:24px;">
+            <img src="{% static 'images/twitter.png' %}" alt="Twitter" style="height:40px; width:40px;">
           </div>
           <div style="background:#c4ff00; border-radius:50%; padding:10px; display:flex; align-items:center; justify-content:center;">
-            <img src="{% static 'images/instagram.png' %}" alt="Instagram" style="height:24px; width:24px;">
+            <img src="{% static 'images/instagram.png' %}" alt="Instagram" style="height:40px; width:40px;">
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
       </div>
 
       <!-- Newsletter -->
-      <div class="col-md-3 mb-4">
+      <div class="col-md-3 mt-3">
         <h6 style="font-weight:bold;">Newsletter</h6>
         <form class="d-flex mb-2">
           <input type="email" class="form-control" placeholder="Enter Your Email"
@@ -59,7 +59,7 @@
             Subscribe
           </button>
         </form>
-        <p style="font-size:14px; color:#ccc;">NFT’s are Transforming the way Commerce is a Transacted.</p>
+        <p style="font-size:18px; color:#ccc;">NFT’s are Transforming the way Commerce is a Transacted.</p>
       </div>
 
     </div>
