--- a/templates/trading/include/navbar.html
+++ b/templates/trading/include/navbar.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="d-flex justify-content-center align-items-center flex-fill">
-      <a href="#" style="color:#cbbfc0; font-size:18px; font-weight:bold; text-decoration:none;">Blogs</a>
+      <a href="{% url 'blog' %}" style="color:#cbbfc0; font-size:18px; font-weight:bold; text-decoration:none;">Blogs</a>
     </div>
 
     <div class="d-flex justify-content-center align-items-center flex-fill">
