update the production

--- a/templates/trading/layout/register.html
+++ b/templates/trading/layout/register.html
@@ -1,5 +1,5 @@
 {% extends "trading/layout/base.html" %} {% load static %} {% block title
-%}Register{% endblock %} {% block content %}
+%}Register {% block content %}
 <div class="row d-flex align-items-center">
   <div class="col-md-6 text-center">
     {% if bull_url %}
