--- a/templates/trading/include/footer.html
+++ b/templates/trading/include/footer.html
@@ -25,9 +25,9 @@
       </div>
 
       <div class="col-md-2 mb-4">
-        <p><a href="#" style="color:white; text-decoration:none;">Home</a></p>
+        <p><a href="{% url 'home' %}" style="color:white; text-decoration:none;">Home</a></p>
         <p><a href="#" style="color:white; text-decoration:none;">Trade Investor</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">About Us</a></p>
+        <p><a href="{% url 'about' %}" style="color:white; text-decoration:none;">About Us</a></p>
         <p><a href="#" style="color:white; text-decoration:none;">Blogs</a></p>
         <p><a href="#" style="color:white; text-decoration:none;">Become a Partner</a></p>
       </div>
