--- a/templates/trading/layout/about.html
+++ b/templates/trading/layout/about.html
@@ -2,7 +2,6 @@
 
 <section class="position-relative w-100">
   {% if content.banner_image %}
-  <!-- <img src="{{ content.banner_image.url }}" alt="Banner" class="w-100" style="height:auto;"> -->
   <img
     src="{% static 'images/a_banner.jpg' %}"
     alt="Banner"
@@ -12,15 +11,13 @@
   {% endif %}
   <div class="position-absolute top-50 start-50 translate-middle text-center">
     <h1
-      class="text-white fw-bold px-4 py-2"
+      class="text-dark fw-bold px-4 py-2"
       style="
-        background: linear-gradient(90deg, #070c0e, #bafd02);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+        
         font-size: 400%;
       "
     >
-      {{ content.banner_title }}
+      {{ content.banner_title | safe  }}
     </h1>
   </div>
 </section>
