--- a/templates/trading/layout/base.html
+++ b/templates/trading/layout/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}Gold Project{% endblock %}</title>
+  <title>{% block title %}Traco{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { background-color: #0b0f0c; color: #c4ff00; }
