--- a/templates/trading/layout/home.html
+++ b/templates/trading/layout/home.html
@@ -1,5 +1,5 @@
 {% extends "trading/layout/base.html" %}
-{% block title %}Home{% endblock %}
+{% load static %} 
 {% block content %}
 <h2>Welcome, {{ user.first_name }}</h2>
 <p>This is the home page after login.</p>
