--- a/templates/trading/layout/blog.html
+++ b/templates/trading/layout/blog.html
@@ -1,5 +1,5 @@
 {% extends "trading/layout/base.html" %} {% load static %} {% block title
-%}Blog{% endblock %} {% block content %}
+%}Blog {% block content %}
 
 <section class="blog-hero py-5">
   <div class="container">
