--- a/templates/trading/include/navbar.html
+++ b/templates/trading/include/navbar.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="d-flex justify-content-center align-items-center flex-fill">
-      <a href="#" style="color:white; font-size:18px; text-decoration:none;">Become a Partner</a>
+      <a href="{% url 'partner' %}" style="color:white; font-size:18px; text-decoration:none;">Become a Partner</a>
     </div>
 
     <!-- User Menu -->
