--- a/templates/trading/layout/home.html
+++ b/templates/trading/layout/home.html
@@ -1,6 +1,11 @@
 {% extends "trading/layout/base.html" %}
-{% load static %} 
+{% load static %}
+{% block title %}Home{% endblock %}
+
 {% block content %}
-<h2>Welcome, {{ user.first_name }}</h2>
-<p>This is the home page after login.</p>
+
+Welcome to the Home Page
 {% endblock %}
+
+
+
