add footer links

--- a/templates/trading/include/footer.html
+++ b/templates/trading/include/footer.html
@@ -28,24 +28,24 @@
         <p><a href="{% url 'home' %}" style="color:white; text-decoration:none;">Home</a></p>
         <p><a href="#" style="color:white; text-decoration:none;">Trade Investor</a></p>
         <p><a href="{% url 'about' %}" style="color:white; text-decoration:none;">About Us</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Blogs</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Become a Partner</a></p>
+        <p><a href="{% url 'blog' %}" style="color:white; text-decoration:none;">Blogs</a></p>
+        <p><a href="{% url 'partner' %}" style="color:white; text-decoration:none;">Become a Partner</a></p>
       </div>
 
       <div class="col-md-2 mb-4">
         <h6 style="font-weight:bold;">Information</h6>
-        <p><a href="#" style="color:white; text-decoration:none;">Market Explore</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Ready Token</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Main Option</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">File Checking</a></p>
+        <p><a href="{% url 'market_explorer' %}" style="color:white; text-decoration:none;">Market Explore</a></p>
+        <p><a href="{% url 'ready_tokens' %}" style="color:white; text-decoration:none;">Ready Token</a></p>
+        <p><a href="{% url 'option_list' %}" style="color:white; text-decoration:none;">Main Option</a></p>
+        <p><a href="{% url 'file_check' %}" style="color:white; text-decoration:none;">File Checking</a></p>
       </div>
 
       <div class="col-md-2 mb-4">
         <h6 style="font-weight:bold;">Resources</h6>
-        <p><a href="#" style="color:white; text-decoration:none;">FAQ’s</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Blogs</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Doc</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Press Kit</a></p>
+        <p><a href="{% url 'faq' %}" style="color:white; text-decoration:none;">FAQ’s</a></p>
+        <p><a href="{% url 'blogs' %}" style="color:white; text-decoration:none;">Blogs</a></p>
+        <p><a href="{% url 'docs_list' %}" style="color:white; text-decoration:none;">Doc</a></p>
+        <p><a href="{% url 'presskit' %}" style="color:white; text-decoration:none;">Press Kit</a></p>
       </div>
 
       <!-- Newsletter -->
