add footer links

--- a/templates/trading/include/footer.html
+++ b/templates/trading/include/footer.html
@@ -26,7 +26,7 @@
 
       <div class="col-md-2 mb-4">
         <p><a href="{% url 'home' %}" style="color:white; text-decoration:none;">Home</a></p>
-        <p><a href="#" style="color:white; text-decoration:none;">Trade Investor</a></p>
+        <p><a href="{% url 'investor' %}" style="color:white; text-decoration:none;">Trade Investor</a></p>
         <p><a href="{% url 'about' %}" style="color:white; text-decoration:none;">About Us</a></p>
         <p><a href="{% url 'blog' %}" style="color:white; text-decoration:none;">Blogs</a></p>
         <p><a href="{% url 'partner' %}" style="color:white; text-decoration:none;">Become a Partner</a></p>
